--- a/Intro ML and DM/ML-code/L2-preprocessing-drug.ipynb
+++ b/Intro ML and DM/ML-code/L2-preprocessing-drug.ipynb
@@ -54,10 +54,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "button": false,
-    "collapsed": true,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -115,8 +114,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Một cách đơn giản để lưu trữ các tập dữ liệu lớn là sử dụng tệp CSV (tệp được phân tách bằng dấu phẩy).\n",
+    "\n",
+    "Đọc file: df = pd.read_csv('data.csv')\n",
+    "\n",
+    "In toàn bộ data: print(df.to_string())\n",
+    "\n",
+    "Trả về 5 hàng đầu và 5 hàng cuối: print(df) "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -124,10 +136,153 @@
      "read_only": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>BP</th>\n",
+       "      <th>Cholesterol</th>\n",
+       "      <th>Na_to_K</th>\n",
+       "      <th>Drug</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>23</td>\n",
+       "      <td>F</td>\n",
+       "      <td>HIGH</td>\n",
+       "      <td>HIGH</td>\n",
+       "      <td>25.355</td>\n",
+       "      <td>drugY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>47</td>\n",
+       "      <td>M</td>\n",
+       "      <td>LOW</td>\n",
+       "      <td>HIGH</td>\n",
+       "      <td>13.093</td>\n",
+       "      <td>drugC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>47</td>\n",
+       "      <td>M</td>\n",
+       "      <td>LOW</td>\n",
+       "      <td>HIGH</td>\n",
+       "      <td>10.114</td>\n",
+       "      <td>drugC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>28</td>\n",
+       "      <td>F</td>\n",
+       "      <td>NORMAL</td>\n",
+       "      <td>HIGH</td>\n",
+       "      <td>7.798</td>\n",
+       "      <td>drugX</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>61</td>\n",
+       "      <td>F</td>\n",
+       "      <td>LOW</td>\n",
+       "      <td>HIGH</td>\n",
+       "      <td>18.043</td>\n",
+       "      <td>drugY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>22</td>\n",
+       "      <td>F</td>\n",
+       "      <td>NORMAL</td>\n",
+       "      <td>HIGH</td>\n",
+       "      <td>8.607</td>\n",
+       "      <td>drugX</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>49</td>\n",
+       "      <td>F</td>\n",
+       "      <td>NORMAL</td>\n",
+       "      <td>HIGH</td>\n",
+       "      <td>16.275</td>\n",
+       "      <td>drugY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>41</td>\n",
+       "      <td>M</td>\n",
+       "      <td>LOW</td>\n",
+       "      <td>HIGH</td>\n",
+       "      <td>11.037</td>\n",
+       "      <td>drugC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>60</td>\n",
+       "      <td>M</td>\n",
+       "      <td>NORMAL</td>\n",
+       "      <td>HIGH</td>\n",
+       "      <td>15.171</td>\n",
+       "      <td>drugY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>43</td>\n",
+       "      <td>M</td>\n",
+       "      <td>LOW</td>\n",
+       "      <td>NORMAL</td>\n",
+       "      <td>19.368</td>\n",
+       "      <td>drugY</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Age Sex      BP Cholesterol  Na_to_K   Drug\n",
+       "0   23   F    HIGH        HIGH   25.355  drugY\n",
+       "1   47   M     LOW        HIGH   13.093  drugC\n",
+       "2   47   M     LOW        HIGH   10.114  drugC\n",
+       "3   28   F  NORMAL        HIGH    7.798  drugX\n",
+       "4   61   F     LOW        HIGH   18.043  drugY\n",
+       "5   22   F  NORMAL        HIGH    8.607  drugX\n",
+       "6   49   F  NORMAL        HIGH   16.275  drugY\n",
+       "7   41   M     LOW        HIGH   11.037  drugC\n",
+       "8   60   M  NORMAL        HIGH   15.171  drugY\n",
+       "9   43   M     LOW      NORMAL   19.368  drugY"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "my_data = pd.read_csv(\"data/drug200.csv\", delimiter=\",\")\n",
-    "my_data[0:5]"
+    "my_data[0:10]"
    ]
   },
   {
@@ -139,9 +294,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(200, 6)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "my_data.shape"
    ]
@@ -175,12 +341,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[23, 'F', 'HIGH', 'HIGH', 25.355],\n",
+       "       [47, 'M', 'LOW', 'HIGH', 13.093],\n",
+       "       [47, 'M', 'LOW', 'HIGH', 10.114],\n",
+       "       [28, 'F', 'NORMAL', 'HIGH', 7.798],\n",
+       "       [61, 'F', 'LOW', 'HIGH', 18.043],\n",
+       "       [22, 'F', 'NORMAL', 'HIGH', 8.607],\n",
+       "       [49, 'F', 'NORMAL', 'HIGH', 16.275],\n",
+       "       [41, 'M', 'LOW', 'HIGH', 11.037],\n",
+       "       [60, 'M', 'NORMAL', 'HIGH', 15.171],\n",
+       "       [43, 'M', 'LOW', 'NORMAL', 19.368]], dtype=object)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X = my_data[['Age', 'Sex', 'BP', 'Cholesterol', 'Na_to_K']].values\n",
-    "X[0:5]"
+    "X[0:10]"
    ]
   },
   {
@@ -192,14 +378,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[23 0 0 0 25.355]\n",
+      " [47 1 1 0 13.093]\n",
+      " [47 1 1 0 10.114]\n",
+      " [28 0 2 0 7.798]\n",
+      " [61 0 1 0 18.043]]\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn import preprocessing\n",
-    "le_sex = preprocessing.LabelEncoder()\n",
-    "le_sex.fit(['F','M'])\n",
-    "X[:,1] = le_sex.transform(X[:,1]) \n",
+    "le_sex = preprocessing.LabelEncoder() #chuẩn hoá nhãn\n",
+    "le_sex.fit(['F','M']) # fit(y): phù hợp với bộ mã hoá nhãn\n",
+    "X[:,1] = le_sex.transform(X[:,1])  # chuyển đổi nhãn thành mã hoá chuẩn hoá \n",
     "\n",
     "\n",
     "le_BP = preprocessing.LabelEncoder()\n",
@@ -223,12 +421,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[23 0 0 0 1.2865221173753503]\n",
+      " [47 1 1 0 -0.4151453955143358]\n",
+      " [47 1 1 0 -0.8285581765368749]\n",
+      " [28 0 2 0 -1.1499626749753444]\n",
+      " [61 0 1 0 0.2717942708373152]]\n"
+     ]
+    }
+   ],
    "source": [
-    "mean = X[:, -1].mean()\n",
-    "std = X[:, -1].std()\n",
+    "mean = X[:, -1].mean() # tính giá trị trung bình \n",
+    "std = X[:, -1].std() # tính toán độ lệch chuẩn của dữ liệu \n",
     "X[:, -1] = (X[:, -1] - mean) / std\n",
     "print(X[0:5])"
    ]
@@ -242,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -250,7 +460,20 @@
      "read_only": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    drugY\n",
+      "1    drugC\n",
+      "2    drugC\n",
+      "3    drugX\n",
+      "4    drugY\n",
+      "Name: Drug, dtype: object\n"
+     ]
+    }
+   ],
    "source": [
     "y = my_data[\"Drug\"]\n",
     "print(y[0:5])"
@@ -265,10 +488,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "le_sex = preprocessing.LabelEncoder()\n",
@@ -278,9 +499,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4 2 2 3 4]\n"
+     ]
+    }
+   ],
    "source": [
     "print(y[0:5])"
    ]
@@ -298,21 +527,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "py39",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "py39"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.13"
   },
   "widgets": {
    "state": {},
