--- a/Intro ML and DM/ML-code/L2-preprocessing-drug.ipynb
+++ b/Intro ML and DM/ML-code/L2-preprocessing-drug.ipynb
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -137,6 +137,13 @@
     }
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -275,13 +282,14 @@
        "9   43   M     LOW      NORMAL   19.368  drugY"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "my_data = pd.read_csv(\"data/drug200.csv\", delimiter=\",\")\n",
+    "print(type(my_data))\n",
     "my_data[0:10]"
    ]
   },
@@ -341,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +367,7 @@
        "       [43, 'M', 'LOW', 'NORMAL', 19.368]], dtype=object)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +397,17 @@
       " [47 1 1 0 13.093]\n",
       " [47 1 1 0 10.114]\n",
       " [28 0 2 0 7.798]\n",
-      " [61 0 1 0 18.043]]\n"
+      " [61 0 1 0 18.043]\n",
+      " [22 0 2 0 8.607]\n",
+      " [49 0 2 0 16.275]\n",
+      " [41 1 1 0 11.037]\n",
+      " [60 1 2 0 15.171]\n",
+      " [43 1 1 1 19.368]\n",
+      " [47 0 1 0 11.767]\n",
+      " [34 0 0 1 19.199]\n",
+      " [43 1 1 0 15.376]\n",
+      " [74 0 1 0 20.942]\n",
+      " [50 0 2 0 12.703]]\n"
      ]
     }
    ],
@@ -409,7 +427,7 @@
     "le_Chol.fit([ 'NORMAL', 'HIGH'])\n",
     "X[:,3] = le_Chol.transform(X[:,3])\n",
     "\n",
-    "print(X[0:5])"
+    "print(X[0:15])"
    ]
   },
   {
